       game would enter an infinite loop (bug #10621)
   * Two Brothers:
     * updated the music playlists in all scenarios to include the new music
 * graphics:
   * overlays are properly drawn at the top row (eg forrest) (bug #10238)
   * mountains no longer have a hill as base
   * when a leader dies the villages, which are no longer are owned, are
     properly redrawn (bug #9136)
 * language and i18n:
   * updated translations: Chinese, Danish, Finnish, French, German, Italian,
     Lithuanian, Slovak, Spanish
 * multiplayer:
   * revised maps: Den of Onis, Weldyn Channel
   * renaming a unit no longer generates an OOS error (bug #7864)
   * if in a MP campaign the endlevel was continue(_no_save) it could happen
     that the client left before the host uploaded the new scenarion, this 
     has been fixed
   * when joining a MP game the recall list wasn't loaded which leads to
     OOS errors in campaigns (bug #10624)
   * :droid can now use the additional parameters on & off to enable/disable
     the AI status of a side instead of toggle it (FR #9676)
 * sound:
   * timer bell in MP starts when there are 20 seconds left and fades in
     gradually for 10 seconds (fr #10559)
   * fixed timer bell not always playing (bug #10559)
   * it was possible to add the same track to the playlist twice which
     could lead to an infinite loop (bug #10112)
 * units:
   * balancing changes:
     * increased the XP requirement of the Vampire Bat from 14 to 22
     * decreased the HP of the Vampire Bat from 17 to 16
 * user interface
   * the apple key works as shortcut modifier again (bug #10586)
   * made "Show lobby joins of friends only" the default preference
   * new menu option added to save replays manually
   * show damage statistics for the current turn in the statistics window
 * WML engine:
   * new tag [filter_vision] for Standard Unit Filter
   * it is now possible to play [sound] repeatedly using a "repeat" attribute